Fix word break on headings

--- a/ckanext/sprout/assets/css/custom.css
+++ b/ckanext/sprout/assets/css/custom.css
@@ -118,7 +118,6 @@ a:hover {
 .card-title {
   font-weight: 300;
   font-size: 20px;
-  display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   height: 66px;
@@ -129,6 +128,11 @@ a:hover {
       -ms-flex-pack: center;
           justify-content: center;
   word-break: break-all !important;
+  padding: 10px;
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
 }
 .card-text {
   font-size: 16px;
@@ -185,6 +189,9 @@ a:hover {
 }
 .table-bordered {
   word-break: break-all;
+}
+.page-heading {
+  word-break: break-all !important;
 }
 .footer {
   padding: 4rem 0;
