--- a/ckanext/sprout/assets/less/_index.less
+++ b/ckanext/sprout/assets/less/_index.less
@@ -145,6 +145,11 @@ a:hover {
   align-items: center;
   justify-content: center;
   word-break: break-all !important;
+  padding: 10px;
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
 }
 
 .card-text {
@@ -198,4 +203,8 @@ a:hover {
 
 .table-bordered {
   word-break: break-all;
+}
+
+.page-heading {
+  word-break: break-all !important;
 }
